[gd_scene load_steps=13 format=2]

[ext_resource path="res://title_name_storehouse.gd" type="Script" id=1]
[ext_resource path="res://title_storehouse.gd" type="Script" id=2]
[ext_resource path="res://NotoSerifCJKtc-Black.otf" type="DynamicFontData" id=3]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/稱號倉庫背景圖一版.png-85e9df5760058328be719c744b5e67e9.stex"

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/關閉按鈕一版.png-0877cc0f427a3e02d4fee65289d0c79e.stex"

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="StreamTexture" id=4]
load_path = "res://.import/稱號倉庫_白-測試.png-7d0f1e6c30433ddab4e27e5caeaaba44.stex"

[sub_resource type="StreamTexture" id=5]
load_path = "res://.import/稱號倉庫_灰-測試.png-45878adc131a766ba0d8c83ff346abd9.stex"

[sub_resource type="StreamTexture" id=6]
load_path = "res://.import/黃色粉筆線.png-2635f4ae0207cdab4e9736268b3d33b2.stex"

[sub_resource type="StreamTexture" id=7]
load_path = "res://.import/白色粉筆線.png-6539338cab6950f24291f176e455871b.stex"

[sub_resource type="StreamTexture" id=8]
load_path = "res://.import/稱號倉庫下一頁按鈕一版.png-f424a2d5d3bdaa84cb9b0c3567822042.stex"

[sub_resource type="StreamTexture" id=9]
load_path = "res://.import/稱號倉庫上一頁按鈕一版.png-add9c3aafda58f70c2aa865e91b691a4.stex"

[node name="title_storehouse" type="Sprite"]
script = ExtResource( 2 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 164.391, 120.735 )
scale = Vector2( 0.332135, 0.332135 )
texture = SubResource( 1 )

[node name="close" type="TextureButton" parent="."]
margin_left = 269.0
margin_top = 38.0
margin_right = 286.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close_picture" type="Sprite" parent="."]
position = Vector2( 279.388, 46.3021 )
scale = Vector2( 0.68502, 0.68502 )
texture = SubResource( 2 )

[node name="page_01" type="Sprite" parent="."]
visible = false

[node name="8" type="Sprite" parent="page_01"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_01/8"]
margin_left = 207.316
margin_top = 51.6054
margin_right = 260.315
margin_bottom = 66.6054
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_01/8"]
position = Vector2( 233.522, 57.4056 )
scale = Vector2( 0.932243, 0.507227 )
z_index = -1
texture = SubResource( 4 )

[node name="gray_picture" type="Sprite" parent="page_01/8"]
position = Vector2( 233.257, 57.6705 )
scale = Vector2( 0.926084, 0.494907 )
z_index = -2
texture = SubResource( 5 )

[node name="9" type="Sprite" parent="page_01"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_01/9"]
margin_left = 49.3946
margin_top = 81.3407
margin_right = 102.394
margin_bottom = 96.3407
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_01/9"]
position = Vector2( 80.4543, 88.7895 )
scale = Vector2( 1.01232, 0.581143 )
z_index = -1
texture = SubResource( 4 )

[node name="gray_picture" type="Sprite" parent="page_01/9"]
position = Vector2( 82.5732, 88.5246 )
scale = Vector2( 0.901445, 0.568823 )
z_index = -2
texture = SubResource( 5 )

[node name="10" type="Sprite" parent="page_01"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_01/10"]
margin_left = 52.9891
margin_top = 111.27
margin_right = 105.989
margin_bottom = 126.27
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_01/10"]
position = Vector2( 81.5786, 118.13 )
scale = Vector2( 1.01232, 0.581143 )
z_index = -1
texture = SubResource( 4 )

[node name="gray_picture" type="Sprite" parent="page_01/10"]
position = Vector2( 76.2813, 118.66 )
scale = Vector2( 0.913765, 0.581143 )
z_index = -2
texture = SubResource( 5 )

[node name="11" type="Sprite" parent="page_01"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_01/11"]
margin_left = 54.838
margin_top = 141.054
margin_right = 126.838
margin_bottom = 161.054
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_01/11"]
position = Vector2( 130.579, 146.206 )
scale = Vector2( 2.37361, 0.45795 )
z_index = -1
texture = SubResource( 4 )

[node name="gray_picture" type="Sprite" parent="page_01/11"]
position = Vector2( 130.049, 146.736 )
scale = Vector2( 2.36129, 0.507227 )
z_index = -2
texture = SubResource( 5 )

[node name="12" type="Sprite" parent="page_01"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_01/12"]
margin_left = 138.476
margin_top = 108.703
margin_right = 199.476
margin_bottom = 128.703
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_01/12"]
position = Vector2( 205.271, 116.011 )
scale = Vector2( 2.1149, 0.531865 )
z_index = -1
texture = SubResource( 4 )

[node name="gray_picture" type="Sprite" parent="page_01/12"]
position = Vector2( 204.476, 116.011 )
scale = Vector2( 2.10874, 0.531865 )
z_index = -2
texture = SubResource( 5 )

[node name="13" type="Sprite" parent="page_01"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_01/13"]
margin_left = 135.098
margin_top = 51.4108
margin_right = 188.098
margin_bottom = 66.4108
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_01/13"]
position = Vector2( 159.714, 58.0056 )
scale = Vector2( 0.919924, 0.544185 )
z_index = -1
texture = SubResource( 4 )

[node name="gray_picture" type="Sprite" parent="page_01/13"]
position = Vector2( 158.919, 58.2704 )
scale = Vector2( 0.913764, 0.556504 )
z_index = -2
texture = SubResource( 5 )

[node name="14" type="Sprite" parent="page_01"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_01/14"]
margin_left = 129.643
margin_top = 80.4703
margin_right = 171.643
margin_bottom = 96.4703
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_01/14"]
position = Vector2( 150.974, 88.2003 )
scale = Vector2( 0.667378, 0.519547 )
z_index = -1
texture = SubResource( 4 )

[node name="gray_picture" type="Sprite" parent="page_01/14"]
position = Vector2( 150.444, 88.2003 )
scale = Vector2( 0.667378, 0.519546 )
z_index = -2
texture = SubResource( 5 )

[node name="15" type="Sprite" parent="page_01"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_01/15"]
margin_left = 188.428
margin_top = 82.665
margin_right = 241.428
margin_bottom = 97.665
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_01/15"]
position = Vector2( 207.125, 89.2598 )
scale = Vector2( 0.642739, 0.544185 )
z_index = -1
texture = SubResource( 4 )

[node name="gray_picture" type="Sprite" parent="page_01/15"]
position = Vector2( 206.595, 88.9949 )
scale = Vector2( 0.64274, 0.531865 )
z_index = -2
texture = SubResource( 5 )

[node name="16" type="Sprite" parent="page_01"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_01/16"]
margin_left = 243.52
margin_top = 82.665
margin_right = 296.52
margin_bottom = 97.665
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_01/16"]
position = Vector2( 262.482, 89.2598 )
scale = Vector2( 0.648899, 0.544185 )
z_index = -1
texture = SubResource( 4 )

[node name="gray_picture" type="Sprite" parent="page_01/16"]
position = Vector2( 262.482, 88.9949 )
scale = Vector2( 0.661219, 0.531865 )
z_index = -2
texture = SubResource( 5 )

[node name="17" type="Sprite" parent="page_01"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_01/17"]
margin_left = 49.1082
margin_top = 171.13
margin_right = 102.108
margin_bottom = 186.13
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_01/17"]
position = Vector2( 89.5247, 177.46 )
scale = Vector2( 1.14783, 0.531865 )
z_index = -1
texture = SubResource( 4 )

[node name="gray_picture" type="Sprite" parent="page_01/17"]
position = Vector2( 89.26, 177.46 )
scale = Vector2( 1.15399, 0.531865 )
z_index = -2
texture = SubResource( 5 )

[node name="18" type="Sprite" parent="page_01"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_01/18"]
margin_left = 136.633
margin_top = 171.13
margin_right = 189.633
margin_bottom = 186.13
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_01/18"]
position = Vector2( 159.714, 177.725 )
scale = Vector2( 0.698176, 0.544185 )
z_index = -1
texture = SubResource( 4 )

[node name="gray_picture" type="Sprite" parent="page_01/18"]
position = Vector2( 159.449, 177.46 )
scale = Vector2( 0.704337, 0.531865 )
z_index = -2
texture = SubResource( 5 )

[node name="19" type="Sprite" parent="page_01"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_01/19"]
margin_left = 197.433
margin_top = 170.6
margin_right = 250.433
margin_bottom = 185.6
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_01/19"]
position = Vector2( 218.514, 177.195 )
scale = Vector2( 0.698176, 0.544185 )
z_index = -1
texture = SubResource( 4 )

[node name="gray_picture" type="Sprite" parent="page_01/19"]
position = Vector2( 218.25, 176.93 )
scale = Vector2( 0.704337, 0.531865 )
z_index = -2
texture = SubResource( 5 )

[node name="20" type="Sprite" parent="page_01"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_01/20"]
margin_left = 221.0
margin_top = 140.0
margin_right = 272.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_01/20"]
position = Vector2( 246.59, 148.06 )
scale = Vector2( 0.772092, 0.544184 )
z_index = -1
texture = SubResource( 4 )

[node name="gray_picture" type="Sprite" parent="page_01/20"]
position = Vector2( 246.59, 148.06 )
scale = Vector2( 0.784411, 0.544184 )
z_index = -2
texture = SubResource( 5 )

[node name="page_02" type="Sprite" parent="."]

[node name="0" type="Sprite" parent="page_02"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_02/0"]
margin_left = 187.099
margin_top = 49.227
margin_right = 240.099
margin_bottom = 64.227
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_02/0"]
position = Vector2( 212.426, 65.4345 )
scale = Vector2( 0.0644946, 0.0353433 )
z_index = -1
texture = SubResource( 6 )

[node name="gray_picture" type="Sprite" parent="page_02/0"]
position = Vector2( 212.032, 65.3908 )
scale = Vector2( 0.0627851, 0.0347263 )
z_index = -2
texture = SubResource( 7 )

[node name="3" type="Sprite" parent="page_02"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_02/3"]
margin_left = 62.4541
margin_top = 165.635
margin_right = 115.454
margin_bottom = 180.635
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_02/3"]
position = Vector2( 92.7483, 182.303 )
scale = Vector2( 0.0902864, 0.0385863 )
z_index = -1
texture = SubResource( 6 )

[node name="gray_picture" type="Sprite" parent="page_02/3"]
position = Vector2( 91.7924, 182.821 )
scale = Vector2( 0.0873866, 0.042834 )
z_index = -2
texture = SubResource( 7 )

[node name="1" type="Sprite" parent="page_02"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_02/1"]
margin_left = 48.8033
margin_top = 85.5228
margin_right = 101.803
margin_bottom = 100.522
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_02/1"]
position = Vector2( 75.3304, 102.518 )
scale = Vector2( 0.0644946, 0.0353433 )
z_index = -1
texture = SubResource( 6 )

[node name="gray_picture" type="Sprite" parent="page_02/1"]
position = Vector2( 74.9365, 102.474 )
scale = Vector2( 0.0627851, 0.0347263 )
z_index = -2
texture = SubResource( 7 )

[node name="2" type="Sprite" parent="page_02"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_02/2"]
margin_left = 59.4594
margin_top = 117.216
margin_right = 112.459
margin_bottom = 132.216
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_02/2"]
position = Vector2( 85.8186, 133.233 )
scale = Vector2( 0.0644946, 0.0353433 )
z_index = -1
texture = SubResource( 6 )

[node name="gray_picture" type="Sprite" parent="page_02/2"]
position = Vector2( 85.4246, 133.189 )
scale = Vector2( 0.0627851, 0.0347263 )
z_index = -2
texture = SubResource( 7 )

[node name="4" type="Sprite" parent="page_02"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_02/4"]
margin_left = 108.123
margin_top = 45.8558
margin_right = 161.123
margin_bottom = 60.8558
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_02/4"]
position = Vector2( 134.514, 63.1871 )
scale = Vector2( 0.0644946, 0.0353433 )
z_index = -1
texture = SubResource( 6 )

[node name="gray_picture" type="Sprite" parent="page_02/4"]
position = Vector2( 134.12, 63.1434 )
scale = Vector2( 0.0627851, 0.0347263 )
z_index = -2
texture = SubResource( 7 )

[node name="7" type="Sprite" parent="page_02"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_02/7"]
margin_left = 141.638
margin_top = 119.238
margin_right = 194.638
margin_bottom = 134.238
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_02/7"]
position = Vector2( 177.57, 139.219 )
scale = Vector2( 0.0940846, 0.0515587 )
z_index = -1
texture = SubResource( 6 )

[node name="gray_picture" type="Sprite" parent="page_02/7"]
position = Vector2( 178.431, 139.363 )
scale = Vector2( 0.0950344, 0.0525632 )
z_index = -2
texture = SubResource( 7 )

[node name="6" type="Sprite" parent="page_02"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_02/6"]
margin_left = 216.056
margin_top = 87.378
margin_right = 269.056
margin_bottom = 102.378
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_02/6"]
position = Vector2( 240.893, 105.14 )
scale = Vector2( 0.0644946, 0.0353433 )
z_index = -1
texture = SubResource( 6 )

[node name="gray_picture" type="Sprite" parent="page_02/6"]
position = Vector2( 240.499, 105.096 )
scale = Vector2( 0.0627851, 0.0347263 )
z_index = -2
texture = SubResource( 7 )

[node name="5" type="Sprite" parent="page_02"]
z_index = 10
script = ExtResource( 1 )

[node name="title_name" type="Label" parent="page_02/5"]
margin_left = 140.913
margin_top = 87.3569
margin_right = 193.913
margin_bottom = 102.357
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bright_picture" type="Sprite" parent="page_02/5"]
position = Vector2( 170.098, 102.892 )
scale = Vector2( 0.0644946, 0.0353433 )
z_index = -1
texture = SubResource( 6 )

[node name="gray_picture" type="Sprite" parent="page_02/5"]
position = Vector2( 169.704, 102.849 )
scale = Vector2( 0.0627851, 0.0347263 )
z_index = -2
texture = SubResource( 7 )

[node name="next_page" type="Sprite" parent="."]

[node name="next_page_picture" type="Sprite" parent="next_page"]
position = Vector2( 279.441, 186.477 )
scale = Vector2( 0.5177, 0.5177 )
texture = SubResource( 8 )

[node name="next_page" type="TextureButton" parent="next_page"]
margin_left = 273.625
margin_top = 179.957
margin_right = 287.625
margin_bottom = 191.957
__meta__ = {
"_edit_use_anchors_": false
}

[node name="last_page" type="Sprite" parent="."]

[node name="last_pagepicture" type="Sprite" parent="last_page"]
position = Vector2( 260.532, 184.902 )
scale = Vector2( 0.505217, 0.505217 )
texture = SubResource( 9 )
flip_v = true

[node name="last_page" type="TextureButton" parent="last_page"]
margin_left = 253.31
margin_top = 180.793
margin_right = 267.31
margin_bottom = 192.793
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="next_page/next_page" to="." method="_on_next_page_pressed"]
[connection signal="pressed" from="last_page/last_page" to="." method="_on_last_page_pressed"]
